--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Express Demo1</title>
+        {{#if showTests}}
+            <link rel="stylesheet" href="/">
+        {{/if}}
     </head>
     <body>
         <h1 style="color:blue">express Demo1</h1>
